--- a/src/shared/components/data-table/DataTable.scss
+++ b/src/shared/components/data-table/DataTable.scss
@@ -9,7 +9,6 @@
 }
 
 .tableContainer {
-  display: block;
   width: var(--table-width, 100%);
   height: var(--table-height, 500px);
   overflow: auto;
